Updated design for buyer seller registration

--- a/src/main/resources/static/indexHB.css
+++ b/src/main/resources/static/indexHB.css
@@ -13,8 +13,8 @@
 }
 
 .menuImage {
-     width: 27px;
- }
+    width: 27px;
+}
 
 .menuImage1 {
     width: 30px;
@@ -35,6 +35,7 @@
 
 .optionType {
     display: flex;
+    justify-content: center;
     margin: 10px 40px;
 }
 
@@ -90,7 +91,6 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -98,13 +98,11 @@
     margin-left: 40px;
 }
 
-.imageDiv {
-}
-
 .optionItem {
     display: flex;
     font-size: 14px;
 }
+
 .rightAlignText {
     flex: 1;
     font-size: 14px;
@@ -115,7 +113,6 @@ textarea {
     width: 269px;
     display: block;
     padding: 9px;
-    margin-bottom: 27px;
     margin-left: 50px;
     height: 100px;
     border: 0.5px solid grey;
@@ -127,21 +124,17 @@ textarea {
     padding: 14px;
 }
 
-#sellerForm input {
-    margin: 0px;
-    width: 88%;
-}
-
 #sellerForm textarea {
     margin-left: 0px;
     border-radius: 15px;
     border: 0.5px solid grey;
 }
 
-#sellerForm .continueButtons {
-    margin-bottom: 40px;
-    margin-left: 40px;
+#sellerForm .continueButtons, #buyerForm .continueButtons {
+    margin: 40px;
+    width: 150px;
 }
+
 
 select {
     -webkit-appearance: none;
@@ -153,7 +146,6 @@ select {
     border-radius: 15px;
     margin-bottom: 5px;
     background-color: white;
-    margin-left: 50px;
     border: 0.5px solid grey;
 }
 
@@ -167,7 +159,6 @@ select {
     width: 40px;
 }
 
-
 .optionItem:hover, .optionImg:hover, input:hover, textarea:hover, select:hover {
     cursor: pointer;
 }
@@ -178,3 +169,11 @@ select {
     align-items: center;
     margin-bottom: 12px;
 }
+
+#sellerForm input, #buyerForm input {
+    width: 269px;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 0;
+}
+
