--- a/src/main/resources/templates/reg1_newUser.html
+++ b/src/main/resources/templates/reg1_newUser.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
-</head>
 
 <body>
 <!-------- HEADER -------->
@@ -27,36 +26,45 @@
 
     <a class="leftArrowAtag" href="/"><p id="arrowPtag">&#60;</p></a>
 
-        <div class="formContainer">
-            <div class="tekst">
-                <p>Fyll ut detaljene nedenfor for å opprette en konto</p>
-                <p class="dineDet">Dine detaljer</p>
+    <div class="formContainer">
+        <div class="tekst">
+            <p>Fyll ut detaljene nedenfor for å opprette en konto</p>
+            <p class="dineDet">Dine detaljer</p>
+        </div>
+
+        <p class="errorText" th:if="${#fields.hasErrors('firstName')}">Fornavn må være mellom 3-20 tegn</p>
+        <input th:field="*{firstName}" th:errorclass="error" class="inputs" id="first" type="text" placeholder="Fornavn"
+               autofocus>
+
+        <p class="errorText" th:if="${#fields.hasErrors('lastName')}">Etternavn må være mellom 3-30 tegn</p>
+        <input th:field="*{lastName}" th:errorclass="error" class="inputs" id="last" type="text"
+               placeholder="Etternavn">
+
+        <p class="errorText" th:if="${#fields.hasErrors('email')}">Ikke gyldig e-post adresse</p>
+        <input th:field="*{email}" th:errorclass="error" type="text" placeholder="E-post">
+
+        <p class="errorText" th:if="${#fields.hasErrors('password')}">Passord må inneholde minst 6 tegn</p>
+        <input th:field="*{password}" th:errorclass="error" class="inputs" type="password" placeholder="Passord">
+
+        <div class="checkboxRegistration">
+            <div class="checkBoxCon">
+                <input type="checkbox" required id="ToS" name="brukervilkaar" value="tos">
+                <label class="" for="tos"> Jeg godkjenner <a href="#"
+                                                    onclick="alert('Din persondata er vår til evig tid, hahaha');">vilkårene</a>
+                    for å bruke PetMatch</label>
             </div>
 
-            <p class="errorText" th:if="${#fields.hasErrors('firstName')}">Fornavn må være mellom 3-20 tegn</p>
-            <input th:field="*{firstName}" th:errorclass="error" class="inputs" id="first" type="text" placeholder="Fornavn" autofocus>
-
-            <p class="errorText" th:if="${#fields.hasErrors('lastName')}">Etternavn må være mellom 3-30 tegn</p>
-            <input th:field="*{lastName}" th:errorclass="error" class="inputs" id="last" type="text" placeholder="Etternavn">
-
-            <p class="errorText" th:if="${#fields.hasErrors('email')}">Ikke gyldig e-post adresse</p>
-            <input th:field="*{email}" th:errorclass="error" type="text" placeholder="E-post">
-
-            <p class="errorText" th:if="${#fields.hasErrors('password')}">Passord må inneholde minst 6 tegn</p>
-            <input th:field="*{password}" th:errorclass="error" class="inputs" type="password" placeholder="Passord">
-
-            <div class="checkboxRegistration">
-               <input type="checkbox" required id="ToS" name="brukervilkaar" value="tos">
-               <label for="tos"> Jeg godkjenner  <a href="#" onclick="alert('Din persondata er vår til evig tid, hahaha');">vilkårene</a> for å bruke PetMatch</label><br>
-            <input type="checkbox" id="NL" name="newsletter" value="nl">
-            <label for="nl"> Jeg vil ha nyhetsbrev</label><br>
-           </div>
-
-            <div id="submitBox">
-                <input class="orangeButton" type="submit" value="Fortsett">
+            <div class="checkBoxCon">
+                <input type="checkbox" id="NL" name="newsletter" value="nl">
+                <label  for="nl"> Jeg vil ha nyhetsbrev</label>
             </div>
         </div>
-    </form>
+
+        <div id="submitBox">
+            <input class="orangeButton" type="submit" value="Fortsett">
+        </div>
+    </div>
+</form>
 </body>
 
 </html>
