Refactoring - removed unused html files and test file

--- a/src/main/resources/templates/allAnimals.html
+++ b/src/main/resources/templates/allAnimals.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
     <title>Pet Match | Alle dyr</title>
-    <link rel="icon" type="image/png" href="image/paw.png">
+    <link rel="icon" type="image/png" href="/image/paw.png">
 </head>
 <body>
 <!-------- HEADER -------->
