--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
     <title>Pet Match | Enkel omplassernig av dyr</title>
-    <link rel="icon" type="image/png" href="image/paw.png">
+    <link rel="icon" type="image/png" href="/image/paw.png">
 
 </head>
 
