--- a/src/main/resources/templates/reg1_newUser.html
+++ b/src/main/resources/templates/reg1_newUser.html
@@ -5,8 +5,8 @@
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" th:href="'stylesheet.css'">
-    <link rel="icon" type="image/png" href="image/paw.png">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css" th:href="'stylesheet.css'">
+    <link rel="icon" type="image/png" href="/image/paw.png">
 </head>
 
 
