--- a/src/main/resources/templates/reg3_newAnimal2.html
+++ b/src/main/resources/templates/reg3_newAnimal2.html
@@ -16,82 +16,86 @@
             <p id="headerLoginTekst">Legg til dyr</p>
         </div>
     </header>
+    <div id="sellerForm" class="showOptions">
+        <!-------- FORM NEW USER -------->
+        <form action="/leggtil" method="post" th:object="${animal}">
+            <input type="hidden" id="animalTypeOptionSeller" th:field="*{animalType}">
+            <input type="hidden" id="chippedOption" th:field="*{isChipped}">
+            <input type="hidden" id="vaccinatedOption" th:field="*{isVaccinated}">
+            <input type="hidden" id="childFriendlyOption" th:field="*{isChildFriendly}">
+            <input type="hidden" id="isSterilizedOption" th:field="*{isSterilized}">
+            <input type="hidden" id="isFemaleOption" th:field="*{isFemale}">
+            <!--        <input type="hidden" id="isActiveOption" th:field="*{isActive}">-->
 
-    <!-------- FORM NEW USER -------->
-    <form action="/leggtil" method="post" th:object="${animal}" id="sellerForm">
-        <!-------- BUYER OPTIONS -------->
-        <input type="hidden" id="animalTypeOption" th:field="*{animalType}">
-        <input type="hidden" id="chippedOption" th:field="*{isChipped}">
-        <input type="hidden" id="vaccinatedOption" th:field="*{isVaccinated}">
-        <input type="hidden" id="childFriendlyOption" th:field="*{isChildFriendly}">
-        <input type="hidden" id="isSterilizedOption" th:field="*{isSterilized}">
-        <input type="hidden" id="isFemaleOption" th:field="*{isFemale}">
-<!--        <input type="hidden" id="isActiveOption" th:field="*{isActive}">-->
+            <div id="sellerOptions">
+                <div class="optionTypeCatDog" id="animalOption">
+                    <p class="optionItem">Hund eller katt?</p>
+                    <div class="imageDiv">
+                        <img id="DOGSELLER" src="image/dogIcon.png" alt="Hund" class="imgActiveOption optionImg">
+                        <img id="CATSELLER" src="image/catIconGrey.png" alt="Katt" class="imgOption optionImg">
+                    </div>
+                </div>
 
-        <div id="sellerOptions" class="showOptions">
-            <div class="optionType" id="animalOption">
-                <p class="optionItem">Hund eller katt?</p>
-                <div class="imageDiv">
-                    <img id="DOG" src="image/dogIcon.png" alt="Hund" class="imgActiveOption optionImg">
-                    <img id="CAT" src="image/catIconGrey.png" alt="Katt" class="imgOption optionImg">
+                <div class="optionType">
+                    <p class="errorText" th:if="${#fields.hasErrors('name')}">Navnet må være mellom 3-20 tegn</p>
+                    <input type="text" th:errorclass="error" th:field="*{name}" placeholder="Navn" required>
+                </div>
+
+                <div class="optionType">
+                    <p class="errorText" th:if="${#fields.hasErrors('age')}">Alder må være mellom 0-20 år</p>
+                    <input th:errorclass="error" type="number" min="0" max="20" th:field="*{age}" placeholder="Alder"
+                           required>
+                </div>
+
+                <div class="optionType">
+                    <p class="errorText" th:if="${#fields.hasErrors('bio')}">Bio kan maks innehold 500 tegn</p>
+                    <textarea th:errorclass="error" type="text" th:field="*{bio}"
+                              placeholder="Skriv litt om dyret" required></textarea>
+                </div>
+
+                <div class="optionType">
+                    <select name="animalSize" required>
+                        <option value="" selected disabled hidden>Størrelse</option>
+                        <option th:each="animalSize : ${T(com.example.demo.AnimalSize).values()}"
+                                th:value="${animalSize}" th:text="${animalSize.displayValuet}"></option>
+                    </select>
+                </div>
+
+                <div class="optionType">
+                    <p class="optionItem rightAlignText">Chip:</p>
+                    <p id="yesChipped" class="activeOption optionItem textOption">Ja</p>
+                    <p id="noChipped" class="option optionItem textOption">Nei</p>
+                </div>
+
+                <div class="optionType">
+                    <p class="optionItem rightAlignText">Vaksinert:</p>
+                    <p id="yesVaccinated" class="activeOption optionItem textOption">Ja</p>
+                    <p id="noVaccinated" class="option optionItem textOption">Nei</p>
+                </div>
+
+                <div class="optionType">
+                    <p class="optionItem rightAlignText">Barnevennlig:</p>
+                    <p id="yesChildfriendly" class="activeOption optionItem textOption">Ja</p>
+                    <p id="noChildfriendly" class="option optionItem textOption">Nei</p>
+                </div>
+
+                <div class="optionType">
+                    <p class="optionItem rightAlignText">Sterilisert/Kastrert:</p>
+                    <p id="yesSterilized" class="activeOption optionItem textOption">Ja</p>
+                    <p id="noSterilized" class="option optionItem textOption">Nei</p>
+                </div>
+
+                <div class="optionType">
+                    <p class="optionItem rightAlignText">Kjønn:</p>
+                    <p id="female" class="activeOption optionItem textOption">Hunkjønn</p>
+                    <p id="male" class="option optionItem textOption">Hankjønn</p>
                 </div>
             </div>
-
             <div class="optionType">
-                <p class="errorText" th:if="${#fields.hasErrors('name')}">Navnet må være mellom 3-20 tegn</p>
-                <input type="text" th:errorclass="error" th:field="*{name}" placeholder="Navn">
+                <input class="continueButtons" type="submit" value="Fortsett">
             </div>
-
-            <div class="optionType">
-                <p class="errorText" th:if="${#fields.hasErrors('age')}">Alder må være mellom 0-20 år</p>
-                <input type="number" th:errorclass="error" min="0" max="20" th:field="*{age}" placeholder="Alder" required>
-            </div>
-
-            <div class="optionType">
-                <p class="errorText" th:if="${#fields.hasErrors('bio')}">Bio kan ikke være lengre enn 500 tegn</p>
-                <textarea type="text" th:errorclass="error" th:field="*{bio}" placeholder="Skriv litt om dyret"></textarea>
-            </div>
-
-            <select name="animalSize" required>
-                <option value="" selected disabled hidden>Størrelse</option>
-                <option th:each="animalSize : ${T(com.example.demo.AnimalSize).values()}"
-                        th:value="${animalSize}" th:text="${animalSize.displayValuet}"></option>
-            </select>
-
-            <div class="optionType">
-                <p class="optionItem">Chip:</p>
-                <p id="yesChipped" class="activeOption optionItem">Ja</p>
-                <p id="noChipped" class="option optionItem">Nei</p>
-            </div>
-
-            <div class="optionType">
-                <p class="optionItem">Vaksinert:</p>
-                <p id="yesVaccinated" class="activeOption optionItem">Ja</p>
-                <p id="noVaccinated" class="option optionItem">Nei</p>
-            </div>
-
-            <div class="optionType">
-                <p class="optionItem">Barnevennlig:</p>
-                <p id="yesChildfriendly" class="activeOption optionItem">Ja</p>
-                <p id="noChildfriendly" class="option optionItem">Nei</p>
-            </div>
-
-            <div class="optionType">
-                <p class="optionItem">Sterilisert/Kastrert:</p>
-                <p id="yesSterilized" class="activeOption optionItem">Ja</p>
-                <p id="noSterilized" class="option optionItem">Nei</p>
-            </div>
-
-            <div class="optionType">
-                <p class="optionItem">Kjønn:</p>
-                <p id="female" class="activeOption optionItem">Hunkjønn</p>
-                <p id="male" class="option optionItem">Hankjønn</p>
-            </div>
-        </div>
-
-        <input class="continueButtons" type="submit" value="Fortsett">
-    </form>
-
+        </form>
+    </div>
     <script src="reg3_newAnimal.js"></script>
 </body>
 </html>
