--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="/indexHB.css">
     <title>Pet Match | Ditt dyr</title>
-    <link rel="icon" type="image/png" href="image/paw.png">
+    <link rel="icon" type="image/png" href="/image/paw.png">
 </head>
 <body>
 
