--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Templates</title>
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
-    <link rel="icon" type="image/png" href="image/paw.png">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
+    <link rel="icon" type="image/png" href="/image/paw.png">
 </head>
 <body>
 
