changed text in faq and about

--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -64,7 +64,7 @@
     function faq() {
         alert(
             "Er denne tjenesten gratis å bruke?\n" +
-            "Ja, den er gratis å bruke, foreløpig.\n" +
+            "Ja, den er gratis å bruke.\n" +
             "\nHvilke dyr finnes på PetMatch?\n" +
             "Hund og katt, men flere kommer snart.\n" +
             "\nKan dyrevernsorganisasjoner bruke PetMatch?\n" +
@@ -74,7 +74,7 @@
 
     function about() {
         alert("PetMatch er en foreløpig gratis tjeneste for omplassering av dyr.\n" +
-            "\nHer kan eiere og organisasjoner legge ut dyr med omplaasseringsbehov så disse kan få nye eiere.\n");
+            "\nHer kan eiere og organisasjoner legge ut dyr med omplasseringsbehov slik at disse kan få nye eiere.\n");
     }
 
 </script>
