changed text in about

--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -71,7 +71,7 @@
         );
     }
     function about() {
-        alert("PetMatch er en foreløpig gratis tjeneste for omplassering av dyr.\n" +
+        alert("PetMatch er en gratis tjeneste for omplassering av dyr.\n" +
             "\nHer kan eiere og organisasjoner legge ut dyr med omplasseringsbehov slik at disse kan få nye eiere.\n");
     }
 </script>
